:bug: Fix bottom bar not visible on mobile
This works by replacing heights of 100vh with 100%. VH on mobile does
not take browser ui into account, making browser ui overlap the site.
What's more is, it's done on purpose 🤦‍♂️.
Newer viewport unit dvh is supposed to fix this, but is not supported
broadly yet.

--- a/src/Cards/src/styles/base.css
+++ b/src/Cards/src/styles/base.css
@@ -1,7 +1,8 @@
 body,
 html {
     overscroll-behavior: none;
-    min-height: 100vh;
+    height: 100%;
+    min-height: 100%;
 
     overflow: hidden;
 
@@ -27,4 +28,8 @@ body {
 /* cancel reset */
 a[href] {
     cursor: pointer;
+}
+
+.app-container {
+    height: 100%;
 }
